--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   english_words: ^3.0.0
   syncfusion_flutter_charts: ^19.3.54
+  syncfusion_flutter_gauges: ^19.3.54
+
 
 
   # The following adds the Cupertino Icons font to your application.
